--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@
 
 # Core FastAPI and Database
 fastapi>=0.104.0
+starlette>=0.49.1  # Force security update for CVE-2025-62727
 uvicorn[standard]>=0.24.0
 sqlalchemy>=2.0.0
 aiosqlite>=0.19.0  # SQLite async driver (for testing)
