--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
     "aiohttp>=3.9.0",
     "asyncio-mqtt>=0.16.0",
     "cryptography>=41.0.0",
-    "python-jose[cryptography]>=3.3.0",
+    "pyjwt[crypto]>=2.8.0",
     "passlib[argon2]>=1.7.4",
     "bcrypt==4.1.3",  # Pinned for passlib compatibility (v5.x has breaking changes)
     "python-multipart>=0.0.6",
